# na_stl_2019

./: CMakeLists.txt  README.md
Algorithms/exercise1/: main.cpp
Algorithms/exercise2/: main.cpp
Algorithms/exercise3/: main.cpp
Algorithms/exercise4/: main.cpp
Algorithms/exercise5/: main.cpp
functors/: functors.cpp  handler.cpp
functors/exercises/: functors.cpp  handler.cpp  lambda.cpp  predicate.cpp  rpn.cpp
functors/solutions/: functors.cpp  handler.cpp  lambda.cpp  predicate.cpp
iterator/: BidirectionalIterator.cpp  ForwardIterator.cpp  InputIterator.cpp  OutputIterator.cpp  RandomAccesAndContigiousIterator.cpp  iterators.cpp
test/: CMakeLists.txt
test/ut/: CMakeLists.txt
test/ut/algorithms/: CMakeLists.txt  binary_search_operations.cpp  modifying_sequence_operations.cpp  non_modyfying_sequence_operations.cpp  numeric_operations.cpp  partitioning_operations.cpp
test/ut/containers/: CMakeLists.txt  map_and_multimap.cpp  map_ordered_vs_unordered.cpp  unordered_map_hash_collisions.cpp  vector_capacity.cpp
test/ut/functors/: CMakeLists.txt
test/ut/iterators/: CMakeLists.txt  bubbleSort.cpp  invalidation.cpp
